--- a/ejercicios/proyectoCalc/css/styles.css
+++ b/ejercicios/proyectoCalc/css/styles.css
@@ -45,6 +45,33 @@ body {
   cursor: pointer;
   
 }
+
+.number{
+  background-color: rgb(137, 174, 223);
+  display: inline-block;
+border: 1px solid #bbb;
+border-radius: 1px;
+width: 50px;
+text-align: center;
+padding: 5px;
+margin: 20px 15px 5px 0;
+cursor: pointer;
+
+}
+
+.operator{
+  background-color: rgb(230, 160, 120);
+  display: inline-block;
+border: 1px solid #bbb;
+border-radius: 1px;
+width: 50px;
+text-align: center;
+padding: 5px;
+margin: 20px 15px 5px 0;
+cursor: pointer;
+
+}
+
 .input:hover {
     border: 1px solid #bbb;
    
