--- a/ejercicios/proyectoCalc/css/styles.css
+++ b/ejercicios/proyectoCalc/css/styles.css
@@ -1,20 +1,30 @@
 body {
-    width: 500px;
-  margin: 4% auto;
+  margin-top: 4%;
+  margin-left: 40% ;
   font-family: 'Source Sans Pro', sans-serif;
-  letter-spacing: 5px;
-  font-size: 1.8rem;
+  
+  
   
   
 }
-.calc{
+#selector{
+display: flex;
+
+
+}
+.casio{
+  text-align: left;
+  margin-bottom: 3%;
+  color: #ddd;
+}
+#calc{
     background-color: rgb(50, 50, 50);
-    width: 300px;
+    width: 450px;
     height: 450px;
     position: fixed;
     padding: 20px;
-  -webkit-box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
-  box-shadow: 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
+  
+  box-shadow: 0px 1px 4px 0px rgba(77, 77, 77, 0.685);
   border-radius: 1px;
   
   
@@ -28,7 +38,7 @@ body {
     padding-top: 10px;
     text-align: right;
     margin-right: 6px;
-    font-size: 2.5rem;
+    font-size: 2.3rem;
     overflow-x: auto;
     transition: all .2s ease-in-out;
 }
@@ -41,9 +51,9 @@ body {
   width: 50px;
   text-align: center;
   padding: 5px;
-  margin: 20px 15px 5px 0;
+  margin: 20px 40px 5px 0;
   cursor: pointer;
-  
+  font-size: 1rem;
 }
 
 .number{
@@ -54,9 +64,9 @@ border-radius: 1px;
 width: 50px;
 text-align: center;
 padding: 5px;
-margin: 20px 15px 5px 0;
+margin: 20px 40px 5px 0;
 cursor: pointer;
-
+font-size: 1rem;
 }
 
 .operator{
@@ -67,13 +77,30 @@ border-radius: 1px;
 width: 50px;
 text-align: center;
 padding: 5px;
-margin: 20px 15px 5px 0;
+margin: 20px 40px 5px 0;
 cursor: pointer;
+font-size: 1rem;
+}
+.science{
+  background-color: rgb(57, 216, 163);
+  display: inline-block;
+border: 1px solid #bbb;
+border-radius: 1px;
+width: 50px;
+text-align: center;
+padding: 5px;
+margin: 20px 40px 5px 0;
+cursor: pointer;
+font-size: 1rem;
 
 }
-
-.input:hover {
+.removeScience{
+  display: none;
+}
+.button:hover {
     border: 1px solid #bbb;
    
     box-shadow: inset 0px 1px 4px 0px rgba(0, 0, 0, 0.2);
   }
+
+  
