--- a/ejercicios/Iván Hijano Soler/css/styles.css
+++ b/ejercicios/Iván Hijano Soler/css/styles.css
@@ -1,15 +1,63 @@
 * {
     margin: auto;
     padding: 0px;
+    /*background color gradient*/
+   
+    
+}
+body{
+    background-image: -webkit-linear-gradient(left,pink,#79c2ff, #3481b5 ,#3481b5, #79c2ff,pink);
 }
 h2{
+    background-image: linear-gradient(to right, #2f89ff ,#000000);
+    background-clip: text;
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent;
+
     text-align: center;
+    color:white;
+    text-shadow: #333333,inset;
+    
+}
+h3{
+    
+    text-align: center;
+    background: -webkit-linear-gradient(#ff0000, #333333);
+    background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent
+    
+}
+h4{
+    
+    text-align: center;
+    background: -webkit-linear-gradient(#ff0000, black,blue,green,purple);
+    background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent
+    
+}
+#full {
+    position: relative;
+    left: 0px;
+    top: 80px;
+   width: 600px;
+   height: 600px;
+   background-color:#dbbdd2 ;
+   border:1px solid #CFCFCF;
+   -webkit-border-radius: 10px/7px;
+   -moz-border-radius: 10px/7px;
+   border-radius: 10px/7px;
+   -khtml-border-radius: 10px/7px;
+   box-shadow: 0px 0px 10px rgba(0, 0, 0, .5), inset 0px 0px 10px rgba(0, 0, 0, .5);
+   overflow: hidden;
+   
     
 }
 #visor {
     position: relative;
-    left: 30px;
-    top: 80px;
+    left: 0px;
+    top: 20px;
     width: 400px;
     height: 300px;
     background-color: silver;
@@ -21,17 +69,7 @@ h2{
     height: 300px;
     width: 400px;
 }
-#menu {
-    position: relative;
-    left: 30px;
-    top: 100px;
-    width: 600px;
-    height: 100px;
-    background-color: silver;
-    text-align: center;
-    z-index: 10;
-    
-}
+
 
 #salida {
     position: absolute;
@@ -61,8 +99,29 @@ table {
   border-radius: 1px;
   width: 50px;
   text-align: center;
-  padding: 5px;
+  padding: 10px;
   margin: 20px 40px 5px 0;
   cursor: pointer;
   font-size: 1rem;
+}
+
+#menu {
+    font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    position: relative;
+    left: 0px;
+    top: 50px;
+    width: 500px;
+    height: 155px;
+    list-style-type: none;
+    margin: 20;
+    padding: 0;
+    overflow: hidden;
+    background-color: #d8a4c9;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, .5), inset 0px 0px 10px rgba(0, 0, 0, .5);
+    transition: .3s;
+    padding: 5px;
+    text-align: center;
+    }
+#warning{
+    font-size: smaller;
 }
