--- a/Resuelto/ANGULAR/Angular01/02-angular-bases/src/app/app.component.html
+++ b/Resuelto/ANGULAR/Angular01/02-angular-bases/src/app/app.component.html
@@ -1,2 +1,7 @@
-<app-heroes-hero></app-heroes-hero>
+<!-- <div class="container">
+<div class="card"><app-heroes-list></app-heroes-list></div>
+<div class="card"><app-heroes-hero></app-heroes-hero></div>
+<div class="card"><app-counter></app-counter></div>
+</div> -->
+<div><app-dbz-main-page></app-dbz-main-page></div>
 
